--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,10 @@ jobs:
 
       - name: Test via ${{ matrix.goVer }}
         env:
-          STREAM_KEY: ${{ secrets.STREAM_CHAT_API_KEY }}
-          STREAM_SECRET: ${{ secrets.STREAM_CHAT_API_SECRET }}
+          STREAM_BASE_URL: ${{ vars.STREAM_BASE_URL }}
+          STREAM_API_KEY: ${{ vars.STREAM_API_KEY }}
+          STREAM_API_SECRET: ${{ secrets.STREAM_API_SECRET }}
+          
         run: |
           go test -coverprofile cover.out -v -race ./...
           go tool cover -func=cover.out
